A h1 tag was created

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-
+        <h1>There was a change that was made</h1>
         
         <script src="" async defer></script>
     </body>
